--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     },
     "require": {
         "php": ">=5.3.9",
+        "craue/formflow-bundle": "3.0.x-dev",
         "doctrine/doctrine-bundle": "~1.4",
         "doctrine/orm": "^2.4.8",
         "drmonty/animsition": "4.0.2",
@@ -25,6 +26,7 @@
         "friendsofsymfony/user-bundle": "2.0.x-dev",
         "incenteev/composer-parameter-handler": "~2.0",
         "javiereguiluz/easyadmin-bundle": "v1.16.9",
+        "misd/phone-number-bundle": "^1.2",
         "sensio/distribution-bundle": "~4.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "symfony/assetic-bundle": "~2.3",
